--- a/#src/scss/fonts.scss
+++ b/#src/scss/fonts.scss
@@ -1,15 +1,5 @@
-
-
-
-//первую часть - сокращаем
-//вторую часть - не трогаем, т.к. это имя файла
-//жирность меняем ориентируясь на bold, black и т.д.
-// 100	Тонкий (Волосяной) Thin (Hairline)
-// 200	Дополнительный светлый (Сверхсветлый) Extra Light (Ultra Light)
-// 300	Светлый Light
-// 400	Нормальный Normal
-// 500	Средний Medium
-// 600	Полужирный Semi Bold (Demi Bold)
-// 700	Жирный Bold
-// 800	Дополнительный жирный (Сверхжирный) Extra Bold (Ultra Bold)
-// 900	Черный (Густой) Black (Heavy)
+@include font("MuseoSansCyrl", "MuseoSansCyrl-100", "100", "normal");
+@include font("MuseoSansCyrl", "MuseoSansCyrl-300", "300", "normal");
+@include font("MuseoSansCyrl", "MuseoSansCyrl-500", "500", "normal");
+@include font("MuseoSansCyrl", "MuseoSansCyrl-700", "700", "normal");
+@include font("MuseoSansCyrl", "MuseoSansCyrl-900", "900", "normal");
