input block is ready

--- a/#src/scss/#general.scss
+++ b/#src/scss/#general.scss
@@ -5,7 +5,7 @@
 //reusible class
 
 .container {
-	width: 950px;
+	max-width: 950px;
 	margin: 0 auto;
 }
 
@@ -43,6 +43,10 @@
 	font-weight: 500;
 	background: $main-color;
 	border-radius: 5px;
+	&_submit{
+		padding: 21px 43px;
+		margin-top: 20px;
+	}
 }
 //title
 .title{
@@ -136,6 +140,7 @@
 .header {
 	display: flex;
 	justify-content: space-between;
+	flex-wrap: wrap;
 		&__logo {
 			margin-top: 5px;
 		}
@@ -207,7 +212,7 @@
 		color: #0d0d0d;
 		a {
 			text-decoration: underline;
-			color: #ff0000;
+			color: $main-color;
 		}
 	}
 
@@ -223,4 +228,41 @@
 	}
 }
 
+.consultation {
+	padding: 100px 0px 92px 0px;
+	position: relative;
+	min-height: 680px;;
+	&__title {
+		color: #ffffff;
+		text-align: left;
+		font-family: "MuseoSansCyrl";
+	}
 
+	&__subtitle {
+	font-size: 20px;
+	line-height: 1.2;
+	font-weight: 500;
+	color: #ffffff;
+	margin-top: 80px;
+	}
+}
+
+.feed-form{
+	margin-top: 36px;
+	display: flex;
+	flex-direction: column;
+	width: 300px;
+	:first-child{
+		margin-top: 0px;
+	}
+	input {
+		height: 50px;
+		background-color: #ffffff;
+		border-radius: 5px;
+		margin-top: 15px;
+		padding: 0 20px;
+		font-size: 14px;
+		font-weight: 300;
+		color: #4b4b4b;
+	}
+}
