--- a/#src/scss/#general.scss
+++ b/#src/scss/#general.scss
@@ -269,4 +269,33 @@
 
 .carusel{
 	padding: 81px 0px;
+	&__inner{
+		width: 750px;
+		margin: 0 auto;
+		position: relative;
+	}
+	.slick-prev{
+		top: 50%;
+		top: translateY(-50%);
+		left: -66px;
+		background: none;
+		position: absolute;
+		img{
+			width: 31px;
+			height: 50px;
+		}
+	}
+	.slick-next{
+		top: 50%;
+		top: translateY(-50%);
+		right: -66px;
+		background: none;
+		position: absolute;
+		img{
+			width: 31px;
+			height: 50px;
+		}
+	}
 }
+
+
