--- a/#src/scss/#general.scss
+++ b/#src/scss/#general.scss
@@ -1,12 +1,15 @@
 *{
 	font-family: "MuseoSansCyrl";
 }
-//=======================
+
+
+
 //reusible class
 
 .container {
 	max-width: 950px;
 	margin: 0 auto;
+	overflow: hidden;
 }
 
 //bacground image, 
@@ -57,250 +60,3 @@
 	text-transform: uppercase;
 	text-align: center;
 }
-
-//=======================
-.promo-position{
-	padding: 21px 0 93px 0;
-}
-.promo {
-	min-height: 650px;
-	position: relative;
-	&__title {
-	margin-top: 80px;
-	font-size: 42px;
-	line-height: 1.2;
-	font-weight: 700;
-	text-transform: uppercase;
-	color: #ffffff;
-	}
-
-	&__subtitle {
-		margin-top: 15px;
-		font-size: 24px;
-		line-height: 1.2;
-		font-weight: 500;
-		text-transform: uppercase;
-		color: #ffffff;
-	}
-
-	&__flex-end {
-		display: flex;
-		justify-content: flex-end;
-	}
-
-	&__icons-flex {
-		margin-top: 65px;
-		display: flex;
-	}
-
-	&__icon {
-		margin-right: 60px;
-		&:last-child {
-			margin-right: 0px;
-		}
-	}
-
-	&__icon-img {
-		display: block;
-		margin: 0 auto;
-	}
-
-	&__icon-text {
-		margin-top: 20px;
-		font-size: 14px;
-		line-height: 1.2;
-		font-weight: 500;
-		color: #ffffff;
-		text-align: center;
-	}
-
-	&__button {
-		margin-top: 65px;
-		width: 300px;
-		height: 50px;
-		font-size: 16px;
-	}
-
-	&__link {
-		margin-top: 18px;
-		text-decoration: none;
-		font-size: 16px;
-	line-height: 1.2;
-	font-weight: 500;
-	color: #ffffff;
-		span{
-			text-transform: uppercase;
-			text-decoration: underline;
-		}
-	}
-}
-
-
-
-.header {
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
-		&__logo {
-			margin-top: 5px;
-		}
-		&__official {
-		}
-		&__official-text {
-			margin-top: 5px;
-			font-size: 12px;
-			line-height: 1.2;
-			font-weight: 500;
-			color: #ffffff;
-		}
-		&__official-brends {
-			margin-top: 11px;
-			font-size: 18px;
-			line-height: 1.2;
-			font-weight: 700;
-			color: #ffffff;
-		}
-		&__contacts {
-		}
-		&__phone {
-			font-size: 18px;
-			line-height: 1.2;
-			font-weight: 700;
-			color: #ffffff;
-		}
-		&__button {
-			margin-top: 5px;
-			width: 150px;
-			height: 30px;
-			font-size: 12px;
-		}
-}
-
-//=========================
-
-.advantages {
-	background-color: #f6f6f6;
-	min-height: 470px;
-	&__title {
-	}
-
-	&__flex {
-		margin-top: 65px;
-		margin: 65px 7px 0px 7px;
-		display: flex;
-		justify-content: space-between;
-	}
-	&__flex-item {
-		width: 250px;
-	}
-}
-.advantages-position {
-	padding: 70px 0 78px 0;
-}
-
-.flex-item {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-
-	&_text {
-		margin-top: 26px;
-		text-align: center;
-		font-size: 14px;
-		line-height: 1.3;
-		font-weight: 600;
-		color: #0d0d0d;
-		a {
-			text-decoration: underline;
-			color: $main-color;
-		}
-	}
-
-	&__img {
-	}
-
-	&__title {
-		margin-top: 38px;
-		font-size: 18px;
-		line-height: 1.2;
-		font-weight: 700;
-		color: #0d0d0d;
-	}
-}
-//====================================================
-.consultation {
-	padding: 100px 0px 92px 0px;
-	position: relative;
-	min-height: 680px;;
-	&__title {
-		color: #ffffff;
-		text-align: left;
-		font-family: "MuseoSansCyrl";
-	}
-
-	&__subtitle {
-	font-size: 20px;
-	line-height: 1.2;
-	font-weight: 500;
-	color: #ffffff;
-	margin-top: 80px;
-	}
-}
-
-.feed-form{
-	margin-top: 36px;
-	display: flex;
-	flex-direction: column;
-	width: 300px;
-	:first-child{
-		margin-top: 0px;
-	}
-	input {
-		height: 50px;
-		background-color: #ffffff;
-		border-radius: 5px;
-		margin-top: 15px;
-		padding: 0 20px;
-		font-size: 14px;
-		font-weight: 300;
-		color: #4b4b4b;
-	}
-}
-
-//=========================================
-
-.carusel{
-	padding: 108px 0px;
-	&__inner{
-		max-width: 750px;
-		margin: 0 auto;
-		position: relative;
-	}
-	.slick-prev{
-		top: 50%;
-		top: translateY(-50%);
-		left: -66px;
-		background: none;
-		position: absolute;
-		img{
-			width: 31px;
-			height: 50px;
-		}
-	}
-	.slick-next{
-		top: 50%;
-		top: translateY(-50%);
-		right: -66px;
-		background: none;
-		position: absolute;
-			img{
-				width: 31px;
-				height: 50px;
-			}
-	}
-}
-
-
-
-
-
