--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -4,4 +4,10 @@
 @import "variables";
 @import "slick";
 @import "#general";
+@import "section_1_promo.scss";
+@import "section_2_advantages.scss";
+@import "section_3_consultation.scss";
+@import "section_4_slider.scss";
+@import "section_5_catalog.scss";
+
 
