--- a/RunSmart-landing/css/style.css
+++ b/RunSmart-landing/css/style.css
@@ -242,6 +242,7 @@ h6 {
 .container {
   max-width: 950px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .background-image {
@@ -537,7 +538,7 @@ h6 {
 }
 
 .carusel {
-  padding: 108px 0px;
+  padding: 81px 0px;
 }
 
 .carusel__inner {
@@ -570,4 +571,74 @@ h6 {
 .carusel .slick-next img {
   width: 31px;
   height: 50px;
+}
+
+.lick-slide {
+  width: 100%;
+}
+
+.catalog {
+  padding: 0 0 103px 0;
+}
+
+.catalog__tabs {
+  margin-top: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.catalog__tab {
+  width: 220px;
+  height: 50px;
+  border: 2px solid #d0d0d0;
+  font-family: MuseoSansCyrl;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #6b6b6b;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transform: skewX(-25deg);
+      -ms-transform: skewX(-25deg);
+          transform: skewX(-25deg);
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.catalog__tab div {
+  -webkit-transform: skewX(25deg);
+      -ms-transform: skewX(25deg);
+          transform: skewX(25deg);
+}
+
+.catalog__tab:last-child {
+  margin: 0;
+}
+
+.catalog__tab_active {
+  color: #ffffff;
+  background-color: #c70101;
+  border: none;
+}
+
+.catalog__content {
+  margin-top: 60px;
+}
+
+.catalog__item {
+  width: 300px;
+  height: 440px;
+  border: 2px solid #e8e8e8;
 }
