--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -9,5 +9,7 @@
 @import "section_3_consultation.scss";
 @import "section_4_slider.scss";
 @import "section_5_catalog.scss";
+@import "section_6_reviews.scss";
+@import "section_7_footer.scss";
 
 
