--- a/#src/scss/#general.scss
+++ b/#src/scss/#general.scss
@@ -1,4 +1,4 @@
-*{
+* {
 	font-family: "MuseoSansCyrl";
 }
 
@@ -7,56 +7,63 @@
 //reusible class
 
 .container {
-	max-width: 950px;
-	margin: 0 auto;
-	overflow: hidden;
+	max-width: 970px;
+	margin   : 0 auto;
+	overflow : hidden;
+	padding: 0 10px;
 }
 
 //bacground image, 
 .background-image {
 	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	display: flex;
-	z-index: -1;
+	width   : 100%;
+	height  : 100%;
+	top     : 0;
+	left    : 0;
+	display : flex;
+	z-index : -1;
+
 	&__flex-element {
-		flex: 0 0 100%;
+		flex    : 0 0 100%;
 		position: relative;
 	}
+
 	&__img {
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
+		width     : 100%;
+		height    : 100%;
+		top       : 0;
+		left      : 0;
 		object-fit: cover;
-		position: absolute;
-		top: 0;
-		left: 0;
+		position  : absolute;
+		top       : 0;
+		left      : 0;
 	}
 }
 
 //button
 .button {
-	display: block;
+	display       : block;
 	text-transform: uppercase;
-	color: #ffffff;
-	line-height: 1.2;
-	font-weight: 500;
-	background: $main-color;
-	border-radius: 5px;
-	&_submit{
-		padding: 21px 43px;
+	color         : #ffffff;
+	line-height   : 1.2;
+	font-weight   : 500;
+	background    : $main-color;
+	border-radius : 5px;
+
+	&_submit {
+		padding   : 21px 43px;
 		margin-top: 20px;
 	}
 }
+
 //title
-.title{
-	font-size: 30px;
-	line-height: 1.2;
-	font-weight: 700;
-	color: #0d0d0d;
+.title {
+	font-size     : 30px;
+	line-height   : 1.2;
+	font-weight   : 700;
+	color         : #0d0d0d;
 	text-transform: uppercase;
-	text-align: center;
+	text-align    : center;
 }
+
+//////////////////////
