--- a/#src/scss/section_4_slider.scss
+++ b/#src/scss/section_4_slider.scss
@@ -5,6 +5,9 @@
 		max-width: 750px;
 		margin: 0 auto;
 		position: relative;
+		img{
+			max-width: 100%;
+		}
 	}
 	.slick-prev{
 		top: 50%;
@@ -32,4 +35,22 @@
 
 .lick-slide{
 	width: 100%;
+}
+
+@media (max-width: 900px){
+	.slick-prev{
+		left: 0px!important;
+		z-index: 1;
+		img{
+			width: 31px;
+			height: 50px;
+		}
+	}
+	.slick-next{
+		right: 0px!important;
+			img{
+				width: 31px;
+				height: 50px;
+			}
+	}
 }
