--- a/RunSmart-landing/css/style.css
+++ b/RunSmart-landing/css/style.css
@@ -240,9 +240,10 @@ h6 {
 }
 
 .container {
-  max-width: 950px;
+  max-width: 970px;
   margin: 0 auto;
   overflow: hidden;
+  padding: 0 10px;
 }
 
 .background-image {
@@ -401,6 +402,10 @@ h6 {
   margin-top: 5px;
 }
 
+.header__official {
+  margin: 0 20px;
+}
+
 .header__official-text {
   margin-top: 5px;
   font-size: 12px;
@@ -445,10 +450,13 @@ h6 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .advantages__flex-item {
   width: 250px;
+  margin: 0px 5px;
 }
 
 .advantages-position {
@@ -547,6 +555,10 @@ h6 {
   position: relative;
 }
 
+.carusel__inner img {
+  max-width: 100%;
+}
+
 .carusel .slick-prev {
   top: 50%;
   top: translateY(-50%);
@@ -595,7 +607,6 @@ h6 {
   width: 220px;
   height: 50px;
   border: 2px solid #d0d0d0;
-  font-family: MuseoSansCyrl;
   font-size: 18px;
   line-height: 1.2;
   font-weight: 500;
@@ -635,10 +646,419 @@ h6 {
 
 .catalog__content {
   margin-top: 60px;
+  display: none;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.catalog__content_active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .catalog__item {
   width: 300px;
   height: 440px;
+  margin-top: 16px;
   border: 2px solid #e8e8e8;
+  padding: 20px;
+  overflow: hidden;
+}
+
+.catalog-item__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: calc(200% + 40px);
+  min-height: 330.6px;
+}
+
+.catalog-item__content {
+  width: 50%;
+  -webkit-transition: 0.5s all;
+  -o-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-transform: translateX(0%);
+      -ms-transform: translateX(0%);
+          transform: translateX(0%);
+  margin-right: 20px;
+}
+
+.catalog-item__content_active {
+  -webkit-transform: translateX(-100%);
+      -ms-transform: translateX(-100%);
+          transform: translateX(-100%);
+  margin-right: 0px;
+}
+
+.catalog-item__list {
+  width: 50%;
+  margin-left: 20px;
+  -webkit-transform: translateX(0%);
+      -ms-transform: translateX(0%);
+          transform: translateX(0%);
+  -webkit-transition: 0.5s all;
+  -o-transition: 0.5s all;
+  transition: 0.5s all;
+  padding-left: 19px;
+  padding-right: 20px;
+  margin-bottom: 0;
+}
+
+.catalog-item__list_active {
+  -webkit-transform: translateX(-100%);
+      -ms-transform: translateX(-100%);
+          transform: translateX(-100%);
+  margin-left: 0px;
+}
+
+.catalog-item__list li {
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 300;
+  color: #555555;
+  margin-top: 23px;
+  position: relative;
+}
+
+.catalog-item__list li:first-child {
+  margin-top: 0;
+}
+
+.catalog-item__list li:before {
+  content: "";
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  background-color: #c70101;
+  top: 5px;
+  left: -21px;
+}
+
+.catalog-item__list li:last-child::before {
+  content: "";
+  position: absolute;
+  width: 0px;
+  height: 0px;
+}
+
+.catalog-item__img {
+  display: block;
+  max-width: 100%;
+  height: 200px;
+  margin: 0 auto;
+}
+
+.catalog-item__subtitle {
+  margin-top: 14px;
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 700;
+  color: #0d0d0d;
+  text-align: center;
+}
+
+.catalog-item__descr {
+  margin-top: 15px;
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #0d0d0d;
+  text-align: center;
+}
+
+.catalog-item__link {
+  margin-top: 16px;
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 500;
+  color: #c70101;
+  text-align: center;
+}
+
+.catalog-item__link a {
+  color: inherit;
+  border-bottom: solid 1px #c70101;
+}
+
+.catalog-item__link-back {
+  margin-top: 60px;
+  margin-right: 29px;
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 500;
+  color: #c70101;
+  text-align: center;
+}
+
+.catalog-item__link-back a {
+  color: inherit;
+  border-bottom: solid 1px #c70101;
+}
+
+.catalog-item__line {
+  width: 260px;
+  height: 1px;
+  background-color: #e8e8e8;
+}
+
+.catalog-item__footer {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.catalog-item__prices {
+  font-size: 20px;
+  line-height: 1.2;
+  font-weight: 700;
+  color: #050505;
+}
+
+.catalog-item__old-price {
+  margin-top: -2px;
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 300;
+  color: #555555;
+  text-decoration: line-through;
+}
+
+.catalog-item__price {
+  margin-top: 3px;
+}
+
+.catalog-item__btn {
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #ffffff;
+  width: 131px;
+  height: 40px;
+  background-color: #c70101;
+  border-radius: 5px;
+}
+
+.reviews-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 884px;
+}
+
+.reviews-card_card-1 {
+  margin-top: 70px;
+}
+
+.reviews-card_card-2 {
+  margin-top: 102px;
+}
+
+.reviews-card_card-3 {
+  margin-top: 100px;
+}
+
+.reviews-card__photo {
+  margin-right: 62px;
+}
+
+.reviews-card__user-name {
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 700;
+  color: #0d0d0d;
+}
+
+.reviews-card__user-level {
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 300;
+  color: #646464;
+  margin-top: 10px;
+}
+
+.reviews-card__user-review {
+  margin-top: 19px;
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 300;
+  color: #0d0d0d;
+}
+
+.footer {
+  margin-top: 71px;
+  min-height: 630px;
+  position: relative;
+}
+
+.footer__map {
+  width: 100%;
+  height: 630px;
+}
+
+.footer__info {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0%);
+      -ms-transform: translate(-50%, 0%);
+          transform: translate(-50%, 0%);
+  background-color: #c70101;
+  width: 460px;
+  height: 270px;
+}
+
+.footer__adress {
+  text-align: center;
+  margin-top: 50px;
+  font-size: 20px;
+  line-height: 1.2;
+  font-weight: 500;
+  color: #ffffff;
+  font-style: normal;
+}
+
+.footer__phone {
+  margin-top: 36px;
+}
+
+.footer__phone a {
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  line-height: 1.2;
+  font-weight: 700;
+  color: #ffffff;
+  font-style: normal;
+}
+
+.footer__social {
+  width: 210px;
+  margin: 0 auto;
+  margin-top: 38px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media (max-width: 900px) {
+  .slick-prev {
+    left: 0px !important;
+    z-index: 1;
+  }
+
+  .slick-prev img {
+    width: 31px;
+    height: 50px;
+  }
+
+  .slick-next {
+    right: 0px !important;
+  }
+
+  .slick-next img {
+    width: 31px;
+    height: 50px;
+  }
+}
+
+@media (max-width: 784px) {
+  .advantages__flex {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    margin-top: 30px;
+  }
+
+  .advantages__flex-item {
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 740px) {
+  .catalog__tabs {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: 20px;
+  }
+
+  .catalog__tab {
+    width: 90%;
+    margin: 0;
+    margin-top: 5px;
+  }
+
+  .catalog__tab:last-child {
+    margin-top: 5px;
+  }
+}
+
+@media (max-width: 658px) {
+  .header__contacts {
+    margin-left: auto;
+    margin-top: 30px;
+    margin-right: 10px;
+  }
+}
+
+@media (max-width: 637px) {
+  .header__official {
+    margin-right: 0px;
+  }
+}
+
+@media (max-width: 550px) {
+  .reviews-card {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+
+  .reviews-card__photo {
+    margin-top: 30px;
+    margin-right: 0;
+    text-align: center;
+  }
+}
+
+@media (max-width: 478px) {
+  .header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .promo__icon {
+    margin-right: 0;
+  }
+
+  .promo__icons-flex {
+    width: 100%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media (max-width: 462px) {
+  .footer__info {
+    width: 100%;
+  }
 }
