modal windows are ready

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -11,5 +11,5 @@
 @import "section_5_catalog.scss";
 @import "section_6_reviews.scss";
 @import "section_7_footer.scss";
-
+@import "modals.scss";
 
