--- a/RunSmart-landing/css/style.css
+++ b/RunSmart-landing/css/style.css
@@ -952,6 +952,70 @@ h6 {
           justify-content: space-between;
 }
 
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.26);
+  display: none;
+}
+
+.modal {
+  z-index: 1000;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 380px;
+  min-height: 400px;
+  background-color: #dddddd;
+  padding: 38px 38px 40px 38px;
+}
+
+.modal__close {
+  position: absolute;
+  top: 0;
+  right: -40px;
+  color: #c70101;
+  font-size: 41px;
+  line-height: 41px;
+  cursor: pointer;
+}
+
+.modal__subtitle {
+  font-size: 19px;
+  line-height: 1.2;
+  font-weight: 700;
+  color: #0d0d0d;
+  text-align: center;
+}
+
+.modal__descr {
+  text-align: center;
+  margin-top: 11px;
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 700;
+  color: #0d0d0d;
+}
+
+.modal_mini {
+  min-height: 140px;
+}
+
+.feed-form_mt25 {
+  margin-top: 25px;
+}
+
+#consultation,
+#order,
+#thanks {
+  display: none;
+}
+
 @media (max-width: 900px) {
   .slick-prev {
     left: 0px !important;
