--- a/#src/scss/section_5_catalog.scss
+++ b/#src/scss/section_5_catalog.scss
@@ -203,7 +203,7 @@
 		color: #ffffff;
 		width: 131px;
 		height: 40px;
-		background-color: #c70101;
+		background-color: $main-color;
 		border-radius: 5px;
 	}
 }
