--- a/#src/scss/section_4_slider.scss
+++ b/#src/scss/section_4_slider.scss
@@ -7,6 +7,7 @@
 		position: relative;
 		img{
 			max-width: 100%;
+			margin: 0 auto;
 		}
 	}
 	.slick-prev{
@@ -18,6 +19,7 @@
 		img{
 			width: 31px;
 			height: 50px;
+			fill: $main-color;
 		}
 	}
 	.slick-next{
