--- a/#src/scss/section_1_promo.scss
+++ b/#src/scss/section_1_promo.scss
@@ -2,7 +2,7 @@
 	padding: 21px 0 93px 0;
 }
 .promo {
-	min-height: 650px;
+	min-height: 100vh;
 	position: relative;
 	&__title {
 	margin-top: 80px;
