--- a/#src/scss/icomoon.css
+++ b/#src/scss/icomoon.css
@@ -1,10 +1,9 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?wysl3n');
-  src:  url('fonts/icomoon.eot?wysl3n#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?wysl3n') format('truetype'),
-    url('fonts/icomoon.woff?wysl3n') format('woff'),
-    url('fonts/icomoon.svg?wysl3n#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?wysl3n');
+  src:  url('../fonts/icomoon.eot?wysl3n#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.woff?wysl3n') format('woff'),
+    url('../fonts/icomoon.svg?wysl3n#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
