--- a/#src/scss/section_2_advantages.scss
+++ b/#src/scss/section_2_advantages.scss
@@ -53,12 +53,17 @@
 	}
 }
 
-@media(max-width: 784px){
+@media(max-width: 831px){
 	.advantages{
 		&__flex{
 			justify-content: space-around;
 			margin-top: 30px;
 		}
+	}
+}
+
+@media(max-width: 784px){
+	.advantages{
 		&__flex-item{
 			margin-top: 20px;
 		}
