--- a/#src/scss/section_3_consultation.scss
+++ b/#src/scss/section_3_consultation.scss
@@ -50,6 +50,17 @@
 	}
 }
 
+@media(max-width: 420px){
+	.consultation{
+		padding: 32px 0 92px 0;
+		&__subtitle{
+			margin-top: 17px;
+		}
+	}
+
+}
+
+
 @media(max-width: 347px){
 	.feed-form{
 		max-width: 280px;
